--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=demo
+
+spring.datasource.url=jdbc:mysql://localhost/testapplication
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
