--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=root
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
